unsealed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-demo-server
spec:
  selector:
    matchLabels:
      app: react-demo-server
  template:
    metadata:
      labels:
        app: react-demo-server
    spec:
      serviceAccountName: app-server-sa
      containers:
      - name: server
        image: walk1ng/react-demo-server:v1
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
