unsealed/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-demo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-demo-db
  template:
    metadata:
      labels:
        app: react-demo-db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: initdb-scripts
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: initdb-scripts
          configMap:
            name: mysql-init-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: react-demo-db
spec:
  selector:
    app: react-demo-db
  ports:
  - port: 3306  
    targetPort: 3306
