unsealed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-demo-server
spec:
  selector:
    app: react-demo-server
  ports:
  - port: 8080
    targetPort: 8080
