unsealed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-server-ingress
  namespace: appserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: react-demo-server
            port:
              number: 8080
        pathType: Prefix
        path: /demo(/|$)(.*)
    host: argocd.app
